--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <title>Ascii masking</title>
 <style>
 p {
-background : url(#);
+background : url("https://images.pexels.com/photos/63507/pexels-photo-63507.jpeg?cs=srgb&dl=pexels-burak-kebapci-63507.jpg&fm=jpg");
 -webkit-background-clip: text;
 }
 </style>
